# cc_compile_folder

./: .bazelrc  BUILD  BUILD.bazel  any_transition.bzl  create_tree_artifact.bzl  generate_source.bzl  standalone_source_file.cpp  symlink_tree_artifact.bzl
