load("@rules_cc//cc:defs.bzl", "cc_library")
load("generate_source.bzl", "generate_source")
load("create_tree_artifact.bzl", "create_tree_artifact")

platform(
    name = "any",
)

generate_source(
    name = "generated_source",
)

create_tree_artifact(
    name = "tree_artifact",
)

cc_library(
    name = "repro",
    srcs = [
        "standalone_source_file.cpp",
        "tree_artifact",
        "generated_source",
    ],
)
